# portfolio_old

./: README.md
42projects/: print_memory.c
42projects/21sh/: 21sh  CMakeLists.txt  Makefile
42projects/21sh/21sh.dSYM/Contents/Resources/DWARF/: 21sh
42projects/21sh/includes/: sh.h
42projects/21sh/libft/: Makefile
42projects/21sh/libft/includes/: libft.h
42projects/21sh/libft/sources/: ft_convert_base.c  ft_freeitab.c  ft_freestab.c  ft_functions_tools.c  ft_isascii.c  ft_ldstadd.c  ft_ldstassback.c  ft_ldstassend.c  ft_ldstnew.c  ft_ldstpushback.c  ft_ldstpushend.c  ft_lstdup.c  ft_lstpushend.c  ft_putlong.c  ft_putnbr_fd.c  ft_putsdl.c  ft_recursive_power.c  ft_strcstr.c  ft_strdel.c  ft_strdigit.c  ft_strlcpy.c  ft_strndup.c  ft_strnew.c  ft_strnjoin.c  ft_strnstrct.c  ft_strrchr.c  ft_strstr.c  ft_strstrct.c  ft_strwnjoin.c  ft_tolower.c
42projects/21sh/sources/: key_bind.c  main.c  make.c  read.c  termcaps.c
42projects/GNL/: a.out  ft_cat  get_next_line.c  get_next_line.h  main.c  test  test.txt  test1  test2  test_gnl  testa
42projects/GNL/libft/: Makefile
42projects/camagru/: index.php  login.php  montage.php
42projects/camagru/css/: styles.css
42projects/camagru/includes/: footer.php  header.php
42projects/fdf/: Acf.fdf  IGN_Reunion_MNT250_ASC_OCEAN0_S.fdf  Makefile  So.fdf  So2.fdf  bite.fdf
42projects/fdf/includes/: fdf.h
42projects/fdf/libft/: Makefile
42projects/fdf/sources/: ft_help.c  ft_mlx.c  ft_parse.c  ft_print.c  main.c
42projects/fractol/: Makefile  log.txt
42projects/fractol/includes/: fractol.h
42projects/fractol/sources/: buddahbrot.c  burningship.c  init.c  julia.c  key.c  main.c  mandelbrot.c  mandelbrot1.c
42projects/fractol_threads/: Makefile
42projects/fractol_threads/includes/: fractol.h
42projects/fractol_threads/libft/: Makefile
42projects/fractol_threads/sources/: burningship.c  fougere.c  init.c  julia.c  julia_t.c  key.c  koch.c  koch1.c  main.c  mandelbrot.c  mandelbrot1.c  mandelbrot_t.c  mouse.c
42projects/ft_ls/: Makefile  ayayae.txt  log.txt  test.txt  yo.txt
42projects/ft_ls/includes/: ft_ls.h
42projects/ft_ls/libft/: Makefile
42projects/ft_ls/sources/: ft_color.c  ft_lsnew.c  ft_lspushback.c  ft_puttool.c  ft_recup.c  ft_space.c  ft_tools.c  main.c
42projects/ft_ls/src/: ft_job.c  ft_lsfree.c  ft_lsstart.c  ft_open.c  ft_putls.c  ft_puts.c  ft_right.c
42projects/ft_printfV2/: .main.c.swp  Makefile  a.out  auteur  ft_printf  main.c
42projects/ft_printfV2/includes/: .ft_printf.h.swp  ft_printf.h
42projects/ft_printfV2/sources/: .ft_init_tab.c.swp  .ft_wformat.c.swp  ft_functions_flags.c  ft_functions_tools2.c  ft_help.c  ft_help_flag2.c  ft_init_tab.c  ft_init_tab2.c  ft_printf.c  ft_wformat.c
42projects/ft_select/: Makefile
42projects/ft_select/includes/: ft_select.h
42projects/ft_select/sources/: init_term.c  list.c  list2.c  main.c  print.c  print2.c  read.c  signals.c  signals2.c  termcaps.c  tools.c
42projects/lem-in/: Makefile  test1.map  test2.map
42projects/lem-in/includes/: lem_in.h
42projects/lem-in/libft/: Makefile
42projects/lem-in/sources/: error.c  find.c  init.c  main.c  print.c  read.c  relink.c
42projects/lem-in_V2/: Makefile
42projects/lem-in_V2/includes/: lem_in.h
42projects/lem-in_V2/libft/: Makefile
42projects/lem-in_V2/map/: test1.map  test2.map  test3.map  test4.map  test5.map  test6.map
42projects/lem-in_V2/sources/: bestresult.c  error.c  find.c  hextools.c  init.c  main.c  read.c  relink.c
42projects/libft/: Makefile
42projects/libft/libft/: Makefile  auteur
42projects/list_torvalds/: a.out  list_unix.h  main.c
42projects/minishell/: .nfs.2005105f.4329  Makefile
42projects/minishell/includes/: minishell.h
42projects/minishell/sources/: andor.c  built_bonus.c  builtins.c  (+7 more)
42projects/push_swap/: Makefile  aaa.txt  log.txt  test.txt  tester.py
42projects/wolf3d/: Makefile
GTA_serv/cfx-server/: brk3.0.sql  citmp-server.yml
Nanopool_miner/: dpools.txt  dpools_sia.txt  epools.txt  epools_etc.txt  script_reload.au3  start_etc+pasc.bat  start_etc+sia.bat  start_eth+pasc.bat  start_eth+sia.bat  start_only_etc.bat  start_only_eth.bat  start_only_eth_auto_reload.bat
Nanopool_miner/BotMiner/: AutEMining.bat  run.py  run.spec  setup.py  start_only_eth.bat  start_only_eth_auto_reload.bat
Nanopool_miner/Remote manager/: Options.ini
flexget/: flexget setup+conf.txt
overthewire/: bandit.txt
portfolio_site/: flaskapp.wsgi  portfolio.conf
portfolio_site/FlaskApp/: __init__.py
script_dl_torrent/: torrent.py
serveur_Clash_Royal/: clashroyalecustom.keystore
serveur_Clash_Royal/serveur/: ucsdb
serveur_Clash_Royal/test/: AndroidManifest.xml  resources.arsc
teamspeak3/: ts3server.sqlitedb  ts3server.sqlitedb-shm  ts3server.sqlitedb-wal
(+638 files in other folders)
