cmake_minimum_required(VERSION 3.6)
project(21sh)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    includes/sh.h
    libft/includes/ft_printf.h
    libft/includes/libft.h
    libft/sources/ft_atoi.c
    libft/sources/ft_atoi_base.c
    libft/sources/ft_atol_base.c
    libft/sources/ft_btoa.c
    libft/sources/ft_bzero.c
    libft/sources/ft_chrswap.c
    libft/sources/ft_convert_base.c
    libft/sources/ft_dtoa.c
    libft/sources/ft_dtobin.c
    libft/sources/ft_error.c
    libft/sources/ft_find_next_prime.c
    libft/sources/ft_freeitab.c
    libft/sources/ft_freestab.c
    libft/sources/ft_functions_flags.c
    libft/sources/ft_functions_flags2.c
    libft/sources/ft_functions_flags3.c
    libft/sources/ft_functions_tools.c
    libft/sources/ft_functions_tools2.c
    libft/sources/ft_functions_tools3.c
    libft/sources/ft_functions_tools4.c
    libft/sources/ft_getwst.c
    libft/sources/ft_help.c
    libft/sources/ft_help_flag.c
    libft/sources/ft_help_flag2.c
    libft/sources/ft_helpstr.c
    libft/sources/ft_htoa.c
    libft/sources/ft_init_tab.c
    libft/sources/ft_init_tab2.c
    libft/sources/ft_is_prime.c
    libft/sources/ft_isalnum.c
    libft/sources/ft_isalpha.c
    libft/sources/ft_isascii.c
    libft/sources/ft_isdigit.c
    libft/sources/ft_ispaire.c
    libft/sources/ft_isprint.c
    libft/sources/ft_iswap.c
    libft/sources/ft_itoa.c
    libft/sources/ft_itoa_base.c
    libft/sources/ft_ldstadd.c
    libft/sources/ft_ldstassback.c
    libft/sources/ft_ldstassend.c
    libft/sources/ft_ldstnew.c
    libft/sources/ft_ldstpushback.c
    libft/sources/ft_ldstpushend.c
    libft/sources/ft_lstadd.c
    libft/sources/ft_lstat.c
    libft/sources/ft_lstclrlast.c
    libft/sources/ft_lstclrone.c
    libft/sources/ft_lstdel.c
    libft/sources/ft_lstdelone.c
    libft/sources/ft_lstdup.c
    libft/sources/ft_lstend.c
    libft/sources/ft_lstiter.c
    libft/sources/ft_lstlast.c
    libft/sources/ft_lstmap.c
    libft/sources/ft_lstnew.c
    libft/sources/ft_lstpushback.c
    libft/sources/ft_lstpushend.c
    libft/sources/ft_lstsize.c
    libft/sources/ft_ltoa.c
    libft/sources/ft_ltoa_base.c
    libft/sources/ft_memalloc.c
    libft/sources/ft_memccpy.c
    libft/sources/ft_memchr.c
    libft/sources/ft_memcmp.c
    libft/sources/ft_memcpy.c
    libft/sources/ft_memdel.c
    libft/sources/ft_memmove.c
    libft/sources/ft_memset.c
    libft/sources/ft_patch.c
    libft/sources/ft_print_words_tables.c
    libft/sources/ft_printbtoa.c
    libft/sources/ft_printf.c
    libft/sources/ft_putchar.c
    libft/sources/ft_putchar_fd.c
    libft/sources/ft_putendl.c
    libft/sources/ft_putendl_fd.c
    libft/sources/ft_putlong.c
    libft/sources/ft_putnbr.c
    libft/sources/ft_putnbr_base.c
    libft/sources/ft_putnbr_fd.c
    libft/sources/ft_putsdl.c
    libft/sources/ft_putstr.c
    libft/sources/ft_putstr_fd.c
    libft/sources/ft_recursive_factorial.c
    libft/sources/ft_recursive_power.c
    libft/sources/ft_sqrt.c
    libft/sources/ft_stralnum.c
    libft/sources/ft_strascii.c
    libft/sources/ft_strcat.c
    libft/sources/ft_strchr.c
    libft/sources/ft_strclr.c
    libft/sources/ft_strcmp.c
    libft/sources/ft_strconv.c
    libft/sources/ft_strcpy.c
    libft/sources/ft_strcstr.c
    libft/sources/ft_strdel.c
    libft/sources/ft_strdigit.c
    libft/sources/ft_strdup.c
    libft/sources/ft_strdupclr.c
    libft/sources/ft_strequ.c
    libft/sources/ft_striter.c
    libft/sources/ft_striteri.c
    libft/sources/ft_strjoin.c
    libft/sources/ft_strlcat.c
    libft/sources/ft_strlcpy.c
    libft/sources/ft_strlen.c
    libft/sources/ft_strmap.c
    libft/sources/ft_strmapi.c
    libft/sources/ft_strncat.c
    libft/sources/ft_strncmp.c
    libft/sources/ft_strncpy.c
    libft/sources/ft_strndup.c
    libft/sources/ft_strnequ.c
    libft/sources/ft_strnew.c
    libft/sources/ft_strnjoin.c
    libft/sources/ft_strnrstr.c
    libft/sources/ft_strnstr.c
    libft/sources/ft_strnstrct.c
    libft/sources/ft_strrchr.c
    libft/sources/ft_strrev.c
    libft/sources/ft_strsplit.c
    libft/sources/ft_strstr.c
    libft/sources/ft_strstrct.c
    libft/sources/ft_strsub.c
    libft/sources/ft_strtrim.c
    libft/sources/ft_strtrimy.c
    libft/sources/ft_strwjoin.c
    libft/sources/ft_strwnjoin.c
    libft/sources/ft_tolower.c
    libft/sources/ft_toupper.c
    libft/sources/ft_ulpower.c
    libft/sources/ft_ultoa.c
    libft/sources/ft_ultoa_base.c
    libft/sources/ft_wformat.c
    libft/sources/get_next_line.c
    sources/key_bind.c
    sources/main.c
    sources/make.c
    sources/read.c
    sources/termcaps.c)

add_executable(21sh ${SOURCE_FILES})